# table_extractor

./: LICENSE.md  Makefile  README.md  dev-requirements.txt  requirements.txt  setup.cfg  setup.py
.mf_support/: Makefile.jupyter  Makefile.python
data/: foo.0.xlsx
src/table_extractor/: command_extract.py  table_extractor.py
