# -----------
# SPDX-License-Identifier: MIT
# Copyright (c) 2022 Troy Williams

# uuid  : 75e6d13c-7622-11ec-a39f-bdfcf9d8f0c9
# author: Troy Williams
# email : troy.williams@bluebill.net
# date  : 2022-01-15
# -----------

[metadata]
name = tableextractor
version = 0.0.1
author = Troy Williams
author_email = troy.williams@bluebill.net
license = MIT
description = extract tables from pdf files.
# url =
# long_description = file: README.md
# long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
install_requires =
    click
    rich
    pandas
    numpy
    camelot-py[cv]
include_package_data = True
python_requires = >=3.10

# https://setuptools.readthedocs.io/en/latest/userguide/package_discovery.html
[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    te=table_extractor.table_extractor:main

